Fix login/register flow
