# client/src/main/resources/swagger.json
@@ -115,7 +115,7 @@
           "200" : {
             "description" : "successful operation",
             "schema" : {
-              "$ref" : "#/definitions/User"
+              "$ref" : "#/definitions/UserResponse"
             }
           }
         }
@@ -1113,6 +1113,14 @@
         },
         "gitPassword" : {
           "type" : "string"
+        }
+      }
+    },
+    "UserResponse" : {
+      "type" : "object",
+      "properties" : {
+        "user" : {
+          "$ref" : "#/definitions/User"
         }
       }
     },
